--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,37 @@
 {
     "cSpell.words": [
+        "Amanacer",
+        "amanecer",
         "ampm",
+        "Anochecer",
+        "bien",
+        "elementos",
+        "fecha",
+        "horasFormato12",
+        "Humedad",
+        "Jueves",
         "Kolkata",
+        "lugar",
+        "Martes",
+        "meses",
+        "meteoactual",
+        "Miércoles",
+        "minutos",
+        "Noche",
         "Openweathermap",
-        "referrerpolicy"
+        "otro",
+        "otros",
+        "pais",
+        "Presión",
+        "queda",
+        "referrerpolicy",
+        "Resto",
+        "Sábado",
+        "tiempo",
+        "viene",
+        "viento",
+        "Viernes",
+        "zona-horaria",
+        "zonahoraria"
     ]
 }
