Mostrar ciudad y arreglar estilo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Jueves",
         "Kolkata",
         "lugar",
+        "lugarubicacion",
         "Martes",
         "meses",
         "meteoactual",
@@ -25,9 +26,11 @@
         "Presión",
         "queda",
         "referrerpolicy",
+        "resdata",
         "Resto",
         "Sábado",
         "tiempo",
+        "ubicacion",
         "viene",
         "viento",
         "Viernes",
