Preparando para pasar a react

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,13 @@
         "amanecer",
         "ampm",
         "Anochecer",
+        "Aplicacion",
         "bien",
         "elementos",
         "fecha",
         "horasFormato12",
         "Humedad",
+        "jslweatherapp",
         "Jueves",
         "Kolkata",
         "lugar",
@@ -16,6 +18,7 @@
         "Martes",
         "meses",
         "meteoactual",
+        "meteorologica",
         "Miércoles",
         "minutos",
         "Noche",
